force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Partnership Definition</fullName>
            </value>
            <value>
                <fullName>Redlining</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Listed</fullName>
                <default>true</default>
                <label>Listed</label>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Business Case</fullName>
            </value>
            <value>
                <fullName>Contractual Negotiation</fullName>
            </value>
            <value>
                <fullName>Singing</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Churn</fullName>
            </value>
            <value>
                <fullName>Developing</fullName>
                <isActive>false</isActive>
                <label>Developing</label>
            </value>
            <value>
                <fullName>Negotiation</fullName>
                <isActive>false</isActive>
                <label>Negotiation</label>
            </value>
            <value>
                <fullName>Proposal</fullName>
                <isActive>false</isActive>
                <label>Proposal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>