force-app/main/default/objects/Account/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <label>Additional Comments</label>
    <length>50</length>
    <type>Text</type>
</CustomField>