force-app/main/default/objects/Account/fields/All_Investors__c.field-meta.xml
<CustomField>
    <fullName>All_Investors__c</fullName>
    <label>All Investors</label>
    <type>TextArea</type>
</CustomField>