force-app/main/default/objects/Account/fields/And_what_s_considered_a_project__c.field-meta.xml
<CustomField>
    <fullName>And_what_s_considered_a_project__c</fullName>
    <label>And what’s considered a project?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>