force-app/main/default/objects/Account/fields/Are_they_interested_and_willing_to_learn__c.field-meta.xml
<CustomField>
    <fullName>Are_they_interested_and_willing_to_learn__c</fullName>
    <label>Are they interested and willing to learn</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>