force-app/main/default/objects/Account/fields/Are_they_Resellers__c.field-meta.xml
<CustomField>
    <fullName>Are_they_Resellers__c</fullName>
    <label>Are they Resellers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Licenses</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>