force-app/main/default/objects/Account/fields/Automatic_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the box is checked, that means the customer currently has automatic renewal in their contract</inlineHelpText>
    <label>Automatic Renewal</label>
    <type>Checkbox</type>
</CustomField>