force-app/main/default/objects/Account/fields/Business_case_attached__c.field-meta.xml
<CustomField>
    <fullName>Business_case_attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business case attached</label>
    <type>Checkbox</type>
</CustomField>