force-app/main/default/objects/Account/fields/Contact_Client__c.field-meta.xml
<CustomField>
    <fullName>Contact_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Client Name)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>