force-app/main/default/objects/Account/fields/Contract_and_Annexes_attached__c.field-meta.xml
<CustomField>
    <fullName>Contract_and_Annexes_attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract and Annexes attached</label>
    <type>Checkbox</type>
</CustomField>