force-app/main/default/objects/Account/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <inlineHelpText>This is the end date for the current active contract</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>