force-app/main/default/objects/Account/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <inlineHelpText>This is the start date for the current active contract</inlineHelpText>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>