force-app/main/default/objects/Account/fields/Counter__c.field-meta.xml
<CustomField>
    <fullName>Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Counter</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>