force-app/main/default/objects/Account/fields/Current_Share_of_wallet__c.field-meta.xml
<CustomField>
    <fullName>Current_Share_of_wallet__c</fullName>
    <label>Current Share of wallet</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>