force-app/main/default/objects/Account/fields/Customer_ARR_ACV__c.field-meta.xml
<CustomField>
    <fullName>Customer_ARR_ACV__c</fullName>
    <description>This notes the current annual recurring revenue value of the customer</description>
    <inlineHelpText>This notes the current annual recurring revenue value of the customer</inlineHelpText>
    <label>Customer ARR / ACV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>