force-app/main/default/objects/Account/fields/Customer_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Start_Date__c</fullName>
    <inlineHelpText>This date represents when the customer first became a customer</inlineHelpText>
    <label>Customer Start Date</label>
    <type>Date</type>
</CustomField>