force-app/main/default/objects/Account/fields/Customer_Success_Manager__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Add the Customer Success Manager that is responsible for managing the Account</inlineHelpText>
    <label>Customer Success Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>