force-app/main/default/objects/Account/fields/Decision_Makers__c.field-meta.xml
<CustomField>
    <fullName>Decision_Makers__c</fullName>
    <label>Decision Makers</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>