force-app/main/default/objects/Account/fields/Demo_date__c.field-meta.xml
<CustomField>
    <fullName>Demo_date__c</fullName>
    <label>Demo date</label>
    <type>Date</type>
</CustomField>