force-app/main/default/objects/Account/fields/Description_of_partner_business__c.field-meta.xml
<CustomField>
    <fullName>Description_of_partner_business__c</fullName>
    <label>Description of partner business</label>
    <length>150</length>
    <type>Text</type>
</CustomField>