force-app/main/default/objects/Account/fields/Discovery_meeting_date__c.field-meta.xml
<CustomField>
    <fullName>Discovery_meeting_date__c</fullName>
    <label>Discovery meeting date</label>
    <type>Date</type>
</CustomField>