force-app/main/default/objects/Account/fields/Do_they_work_with_competitors__c.field-meta.xml
<CustomField>
    <fullName>Do_they_work_with_competitors__c</fullName>
    <description>Do they work with competitors or offer a similar product to Simetrik?</description>
    <label>Do they work with competitors?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>