force-app/main/default/objects/Account/fields/Domain_Account__c.field-meta.xml
<CustomField>
    <fullName>Domain_Account__c</fullName>
    <formula>IF( CreatedBy.Dominio_Usuario__c = $User.Dominio_Usuario__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domain Account</label>
    <type>Checkbox</type>
</CustomField>