force-app/main/default/objects/Account/fields/Due_diligence_Approved__c.field-meta.xml
<CustomField>
    <fullName>Due_diligence_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Due diligence Approved</label>
    <type>Checkbox</type>
</CustomField>