force-app/main/default/objects/Account/fields/ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_ID__c</fullName>
    <externalId>true</externalId>
    <label>ERP ID</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>