force-app/main/default/objects/Account/fields/Expected_fee__c.field-meta.xml
<CustomField>
    <fullName>Expected_fee__c</fullName>
    <inlineHelpText>Please share average % and level of participation in the sales process</inlineHelpText>
    <label>Expected fee</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>