force-app/main/default/objects/Account/fields/Folder_of_DD_docs_link__c.field-meta.xml
<CustomField>
    <fullName>Folder_of_DD_docs_link__c</fullName>
    <label>Folder of DD docs link</label>
    <type>Url</type>
</CustomField>