force-app/main/default/objects/Account/fields/How_do_they_generate_revenue__c.field-meta.xml
<CustomField>
    <fullName>How_do_they_generate_revenue__c</fullName>
    <inlineHelpText>How do they generate revenue with Saas Partners, and other Partners?</inlineHelpText>
    <label>How do they generate revenue?</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>