force-app/main/default/objects/Account/fields/If__c.field-meta.xml
<CustomField>
    <fullName>If__c</fullName>
    <inlineHelpText>Please share average % and level of participation in the sales process</inlineHelpText>
    <label>If %</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>