force-app/main/default/objects/Account/fields/Improvement_Areas__c.field-meta.xml
<CustomField>
    <fullName>Improvement_Areas__c</fullName>
    <label>Improvement Areas:</label>
    <type>TextArea</type>
</CustomField>