force-app/main/default/objects/Account/fields/Influencers__c.field-meta.xml
<CustomField>
    <fullName>Influencers__c</fullName>
    <label>Influencers</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>