force-app/main/default/objects/Account/fields/Installed_Base__c.field-meta.xml
<CustomField>
    <fullName>Installed_Base__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installed Base</label>
    <type>Checkbox</type>
</CustomField>