force-app/main/default/objects/Account/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <label>Legal Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>