force-app/main/default/objects/Account/fields/Limit_Share_of_wallet__c.field-meta.xml
<CustomField>
    <fullName>Limit_Share_of_wallet__c</fullName>
    <label>Limit Share of wallet</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>