force-app/main/default/objects/Account/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <description>Link to the LinkedIn page for this account</description>
    <label>LinkedIn</label>
    <type>Url</type>
</CustomField>