force-app/main/default/objects/Account/fields/Metabase_ID__c.field-meta.xml
<CustomField>
    <fullName>Metabase_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Metabase ID</label>
    <length>254</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>