force-app/main/default/objects/Account/fields/Min_revenue_expected_for_a_project__c.field-meta.xml
<CustomField>
    <fullName>Min_revenue_expected_for_a_project__c</fullName>
    <label>Min. revenue expected for a project?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>