force-app/main/default/objects/Account/fields/NAIC_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>NAIC_Company_ID__c</fullName>
    <description>NAIC Company ID</description>
    <label>NAIC Company ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>