force-app/main/default/objects/Account/fields/Named_List__c.field-meta.xml
<CustomField>
    <fullName>Named_List__c</fullName>
    <label>Named List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary - ICP List</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Installed Based</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Churn</fullName>
                <isActive>false</isActive>
                <label>Churn</label>
            </value>
            <value>
                <fullName>High Potential</fullName>
                <isActive>false</isActive>
                <label>High Potential</label>
            </value>
            <value>
                <fullName>P1 LATAM Tech</fullName>
                <isActive>false</isActive>
                <label>P1 LATAM Tech</label>
            </value>
            <value>
                <fullName>P2 LATAM Acquirers</fullName>
                <isActive>false</isActive>
                <label>P2 LATAM Acquirers</label>
            </value>
            <value>
                <fullName>P3 LATAM Banks</fullName>
                <isActive>false</isActive>
                <label>P3 LATAM Banks</label>
            </value>
            <value>
                <fullName>P4 LATAM Retail E-Commerce</fullName>
                <isActive>false</isActive>
                <label>P4 LATAM Retail E-Commerce</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>