force-app/main/default/objects/Account/fields/NDA_signed_and_attached__c.field-meta.xml
<CustomField>
    <fullName>NDA_signed_and_attached__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The file NDA must be uploaded to the system</inlineHelpText>
    <label>NDA signed and attached</label>
    <type>Checkbox</type>
</CustomField>