force-app/main/default/objects/Account/fields/Network_Effect__c.field-meta.xml
<CustomField>
    <fullName>Network_Effect__c</fullName>
    <label>Network Effect?</label>
    <type>TextArea</type>
</CustomField>