force-app/main/default/objects/Account/fields/Notes_and_next_steps__c.field-meta.xml
<CustomField>
    <fullName>Notes_and_next_steps__c</fullName>
    <label>Notes and next steps:</label>
    <length>150</length>
    <type>Text</type>
</CustomField>