force-app/main/default/objects/Account/fields/Number_of_Clients__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Clients__c</fullName>
    <inlineHelpText>Indicate the approximate number of clients that this partner serves.</inlineHelpText>
    <label>Number of Clients</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>