force-app/main/default/objects/Account/fields/Other_industry__c.field-meta.xml
<CustomField>
    <fullName>Other_industry__c</fullName>
    <inlineHelpText>If you selected other in the before field, write your specialized industry.</inlineHelpText>
    <label>Other industry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>