force-app/main/default/objects/Account/fields/Partner_registration_form__c.field-meta.xml
<CustomField>
    <fullName>Partner_registration_form__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Sharing partner registration form attached and email approval</inlineHelpText>
    <label>Partner registration form</label>
    <type>Checkbox</type>
</CustomField>