force-app/main/default/objects/Account/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>