force-app/main/default/objects/Account/fields/Positive_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Positive_Feedback__c</fullName>
    <label>Positive Feedback:</label>
    <type>TextArea</type>
</CustomField>