force-app/main/default/objects/Account/fields/Potential_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Potential_Opportunities__c</fullName>
    <label>Potential Opportunities:</label>
    <type>TextArea</type>
</CustomField>