force-app/main/default/objects/Account/fields/Presentation_session__c.field-meta.xml
<CustomField>
    <fullName>Presentation_session__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Associated framework presentation session</inlineHelpText>
    <label>Presentation session</label>
    <type>Checkbox</type>
</CustomField>