force-app/main/default/objects/Account/fields/Reason_for_lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_lost__c</fullName>
    <label>Reason for lost</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rejected by Simetrik</fullName>
            </value>
            <value>
                <fullName>Partner not interested</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>