force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOLA</fullName>
            </value>
            <value>
                <fullName>SOLA</fullName>
            </value>
            <value>
                <fullName>BRAZIL</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>GLOBAL</fullName>
            </value>
            <value>
                <fullName>CENTROAMERICA</fullName>
                <isActive>false</isActive>
                <label>CENTROAMERICA</label>
            </value>
            <value>
                <fullName>LATAM</fullName>
                <isActive>false</isActive>
                <label>LATAM</label>
            </value>
            <value>
                <fullName>NORTEAMERICA</fullName>
                <isActive>false</isActive>
                <label>NORTEAMERICA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>