force-app/main/default/objects/Account/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>No agreement negotiation</fullName>
            </value>
            <value>
                <fullName>Not specialized in the industry</fullName>
            </value>
            <value>
                <fullName>Size</fullName>
            </value>
            <value>
                <fullName>Target customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>