force-app/main/default/objects/Account/fields/Relationship_with_the_account__c.field-meta.xml
<CustomField>
    <fullName>Relationship_with_the_account__c</fullName>
    <inlineHelpText>Provide details</inlineHelpText>
    <label>Relationship with the account:</label>
    <type>TextArea</type>
</CustomField>