force-app/main/default/objects/Account/fields/Security_information__c.field-meta.xml
<CustomField>
    <fullName>Security_information__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Security information form  attached and email approval</inlineHelpText>
    <label>Security information</label>
    <type>Checkbox</type>
</CustomField>