force-app/main/default/objects/Account/fields/SET_MET__c.field-meta.xml
<CustomField>
    <fullName>SET_MET__c</fullName>
    <label>SET/MET</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>