force-app/main/default/objects/Account/fields/Share_of_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Share_of_Wallet__c</fullName>
    <formula>Current_Share_of_wallet__c / Limit_Share_of_wallet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Share of Wallet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>